--- a/index.css
+++ b/index.css
@@ -69,7 +69,7 @@ img{
 }
 .genre > a:hover,
 .see-more > a:hover{
-    background-color: #112c3f;
+    background-color: #3f1111;
     transition: 0.6s;
 }
 .see-more > a {
